--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.28",
+        "predis/predis": "^3.2",
         "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
