--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,11 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Amazon Cognito設定（Phase 1: JWT認証）
+COGNITO_REGION=ap-northeast-1
+COGNITO_USER_POOL_ID=
+COGNITO_CLIENT_ID=
+COGNITO_CLIENT_SECRET=
+COGNITO_ADMIN_CLIENT_ID=
+
 VITE_APP_NAME="${APP_NAME}"
