--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "aws/aws-sdk-php": "^3.317",
+        "firebase/php-jwt": "^6.10",
         "laravel/cashier": "^16.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
