--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,204 @@
-*.log
-.DS_Store
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# MyTeacher App - Project Root .gitignore
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+# ============================================================================
+# 1. 機密情報 (CRITICAL - MUST NEVER BE COMMITTED)
+# ============================================================================
+
+# 環境変数ファイル
 .env
-.env.backup
-.env.production
-.phpactor.json
+.env.*
+!.env.example
+laravel/.env
+laravel/.env.*
+
+# AWSクレデンシャル
+.aws/credentials
+.aws/config
+**/.aws/credentials
+**/.aws/config
+
+# Terraformステートファイル (機密情報を含む可能性あり)
+*.tfstate
+*.tfstate.*
+*.tfstate.backup
+**/.terraform/
+.terraform.lock.hcl
+
+# Terraform変数ファイル (機密情報を含む可能性あり)
+*.tfvars
+!*.tfvars.example
+terraform.tfvars
+terraform.tfvars.json
+
+# SSHキー
+*.pem
+*.key
+*.p12
+*.pfx
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+
+# GPGキー
+*.gpg
+*.asc
+
+# API/サービスキー
+**/secrets/
+service-account*.json
+credentials*.json
+
+# Git管理対象外のバックアップ
+laravel/.git.backup/
+
+# ============================================================================
+# 2. 大容量ディレクトリ (パフォーマンス)
+# ============================================================================
+
+# Node.js
+node_modules/
+**/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# PHP/Composer
+vendor/
+**/vendor/
+composer.phar
+auth.json
+
+# ============================================================================
+# 3. ビルド成果物・キャッシュ
+# ============================================================================
+
+# Laravel
+laravel/public/build/
+laravel/public/hot
+laravel/public/storage
+laravel/public/portal-static/build
+laravel/storage/*.key
+laravel/storage/app/public/*
+!laravel/storage/app/public/.gitignore
+laravel/bootstrap/cache/*
+!laravel/bootstrap/cache/.gitignore
+
+# PHP
 .phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/public/portal-static/build
-/storage/*.key
-/storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
+.phpunit.cache/
+.php-cs-fixer.cache
+.php_cs.cache
+
+# Vite
+dist/
+.vite/
+
+# Terraform
+.terraform/
+*.tfplan
+
+# Docker
+*.tar
+
+# ============================================================================
+# 4. IDE・エディタ設定
+# ============================================================================
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# JetBrains
+.idea/
+*.iml
+*.iws
+*.ipr
+.fleet/
+.nova/
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+.\#*
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Zed
+.zed/
+
+# ============================================================================
+# 5. OS固有
+# ============================================================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
 Thumbs.db
-/public/portal-static
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# ============================================================================
+# 6. ログファイル
+# ============================================================================
+
+*.log
+logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+laravel/storage/logs/*
+!laravel/storage/logs/.gitignore
+
+# ============================================================================
+# 7. テスト・カバレッジ
+# ============================================================================
+
+coverage/
+.nyc_output/
+*.lcov
+.phpunit.result.cache
+.phpunit.cache/
+
+# ============================================================================
+# 8. その他
+# ============================================================================
+
+# 一時ファイル
+*.tmp
+*.temp
+tmp/
+temp/
+
+# バックアップ
+*.backup
+*.bak
+*.old
+
+# Zip/Archive
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Environment variables documentation (contains sensitive patterns)
+definitions/environment-variables.md
