fix: Correct GitHub Actions trigger paths for repository structure
- Update deploy-portal.yml: Remove laravel/ prefix from trigger paths
  - resources/views/portal/** (portal views)
  - public/images/** (portal images)
  - public/build/** (portal assets)
- Update task-service-ci-cd.yml: Fix relative path for services/task-service/
  - Change '../services/task-service/**' to 'services/task-service/**'
- Paths now match actual file locations after repository root migration

These corrections ensure workflows trigger properly when relevant files change.

--- a/.github/workflows/deploy-portal.yml
+++ b/.github/workflows/deploy-portal.yml
@@ -18,9 +18,9 @@ on:
     branches:
       - main
     paths:
-      - 'laravel/resources/views/portal/**'
-      - 'laravel/public/images/**'
-      - 'laravel/public/build/**'
+      - 'resources/views/portal/**'
+      - 'public/images/**'
+      - 'public/build/**'
       - 'scripts/export-portal-static.sh'
       - '.github/workflows/deploy-portal.yml'
   workflow_dispatch:  # 手動トリガー
