fix(ci): correct workflow paths and portal export step
- task-service-ci-cd.yml: use 'services/task-service/**' in triggers; fix working-directory, Docker context/file, and CodeDeploy appspec paths
- deploy-portal.yml: replace nonexistent bash script with 'php artisan-export-portal.php'; track that file in triggers

These fixes align with repo root at / and ensure Actions trigger and run correctly.

--- a/.github/workflows/deploy-portal.yml
+++ b/.github/workflows/deploy-portal.yml
@@ -21,7 +21,7 @@ on:
       - 'resources/views/portal/**'
       - 'public/images/**'
       - 'public/build/**'
-      - 'scripts/export-portal-static.sh'
+      - 'artisan-export-portal.php'
       - '.github/workflows/deploy-portal.yml'
   workflow_dispatch:  # 手動トリガー
 
@@ -106,7 +106,7 @@ jobs:
       #########################################################################
       - name: Export portal static site
         run: |
-          bash ../scripts/export-portal-static.sh
+          php artisan-export-portal.php
           ls -la public/portal-static/
 
       #########################################################################
