--- a/.github/workflows/task-service-ci-cd.yml
+++ b/.github/workflows/task-service-ci-cd.yml
@@ -30,6 +30,20 @@ on:
     paths:
       - 'services/task-service/**'
       - '.github/workflows/task-service-ci-cd.yml'
+  workflow_dispatch:
+    inputs:
+      skip-deploy:
+        description: 'Skip deploy steps'
+        required: false
+        default: 'false'
+      run-db-optimization:
+        description: 'Run DB optimization after deploy'
+        required: false
+        default: 'false'
+      db-optimization-mode:
+        description: 'DB optimization mode (analyze, vacuum-analyze, reindex)'
+        required: false
+        default: 'analyze'
   pull_request:
     branches:
       - main
@@ -97,7 +111,7 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
@@ -157,7 +171,7 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/develop' && (github.event.inputs.skip-deploy != 'true')
     environment:
       name: staging
       url: https://staging-api.myteacher.com
@@ -210,7 +224,7 @@ jobs:
     name: Deploy to Production (Blue/Green)
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && (github.event.inputs.skip-deploy != 'true')
     environment:
       name: production
       url: https://api.myteacher.com
@@ -352,3 +366,55 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  # ==================== DB最適化（Staging） ====================
+  db-optimize-staging:
+    name: DB Optimize (Staging)
+    runs-on: ubuntu-latest
+    needs: deploy-staging
+    if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/develop' && github.event.inputs['run-db-optimization'] == 'true'
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Invoke DB maintenance Lambda (staging)
+        run: |
+          MODE="${{ github.event.inputs['db-optimization-mode'] }}"
+          [ -z "$MODE" ] && MODE="analyze"
+          PAYLOAD=$(jq -n --arg mode "$MODE" '{action:"optimize", environment:"staging", mode:$mode, dryRun:false}')
+          aws lambda invoke \
+            --function-name "${{ secrets.DB_MAINTENANCE_LAMBDA }}" \
+            --payload "$PAYLOAD" \
+            --cli-binary-format raw-in-base64-out \
+            out.json
+          cat out.json
+
+  # ==================== DB最適化（Production） ====================
+  db-optimize-production:
+    name: DB Optimize (Production)
+    runs-on: ubuntu-latest
+    needs: deploy-production
+    if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs['run-db-optimization'] == 'true'
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Invoke DB maintenance Lambda (production)
+        run: |
+          MODE="${{ github.event.inputs['db-optimization-mode'] }}"
+          [ -z "$MODE" ] && MODE="analyze"
+          PAYLOAD=$(jq -n --arg mode "$MODE" '{action:"optimize", environment:"production", mode:$mode, dryRun:false}')
+          aws lambda invoke \
+            --function-name "${{ secrets.DB_MAINTENANCE_LAMBDA }}" \
+            --payload "$PAYLOAD" \
+            --cli-binary-format raw-in-base64-out \
+            out.json
+          cat out.json
