--- a/.github/workflows/task-service-ci-cd.yml
+++ b/.github/workflows/task-service-ci-cd.yml
@@ -1,3 +1,4 @@
+---
 # GitHub Actions Workflow for Task Service CI/CD
 #
 # @description Continuous Integration and Deployment pipeline for Task Service
@@ -75,34 +76,34 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     if: hashFiles('services/task-service/package.json') != ''
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: services/task-service/package-lock.json
-      
+
       - name: Install dependencies
         working-directory: services/task-service
         run: npm ci
-      
+
       - name: Run ESLint
         working-directory: services/task-service
         run: npm run lint || true
-      
+
       - name: Run unit tests
         working-directory: services/task-service
         run: npm test -- --coverage --testPathPattern=tests/unit
-      
+
       - name: Run integration tests
         working-directory: services/task-service
         run: npm test -- --testPathPattern=tests/integration
-      
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -110,7 +111,7 @@ jobs:
           flags: task-service
           name: task-service-coverage
           fail_ci_if_error: false
-      
+
       - name: Archive test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -124,31 +125,33 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: |
-      (github.event_name == 'push' || 
-       (github.event_name == 'workflow_dispatch' && 
-        github.event.inputs.build-only != 'true' && 
-        github.event.inputs.skip-deploy != 'true')) && 
-      hashFiles('services/task-service/package.json') != '' && (needs.test.result == 'success' || github.event.inputs.force-deploy == 'true')
-    
+      (github.event_name == 'push' ||
+       (github.event_name == 'workflow_dispatch' &&
+        github.event.inputs.build-only != true &&
+        github.event.inputs.skip-deploy != true)) &&
+      hashFiles('services/task-service/package.json') != '' &&
+      (needs.test.result == 'success' ||
+       github.event.inputs.force-deploy == true)
+
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
       image-digest: ${{ steps.build.outputs.digest }}
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -159,10 +162,10 @@ jobs:
             type=ref,event=pr
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Build and push Docker image
         id: build
         uses: docker/build-push-action@v5
@@ -178,7 +181,7 @@ jobs:
             NODE_ENV=production
             BUILD_DATE=${{ github.event.head_commit.timestamp }}
             GIT_COMMIT=${{ github.sha }}
-      
+
       - name: Image digest
         run: |
           echo "Image digest: ${{ steps.build.outputs.digest }}"
@@ -188,32 +191,37 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: build
-    if: (github.ref == 'refs/heads/develop' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target-environment == 'staging')) && (github.event.inputs.skip-deploy != 'true' && github.event.inputs.build-only != 'true')
+    if: |
+      (github.ref == 'refs/heads/develop' ||
+       (github.event_name == 'workflow_dispatch' &&
+        github.event.inputs.target-environment == 'staging')) &&
+      github.event.inputs.skip-deploy != true &&
+      github.event.inputs.build-only != true
     environment:
       name: staging
       url: https://staging-api.myteacher.com
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+
       - name: Download task definition
         run: |
           aws ecs describe-task-definition \
             --task-definition myteacher-task-service-staging \
             --query taskDefinition > task-def-staging.json
-      
+
       - name: Update task definition with new image
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
@@ -221,7 +229,7 @@ jobs:
           task-definition: task-def-staging.json
           container-name: task-service
           image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-      
+
       - name: Deploy to ECS (Staging)
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
@@ -230,7 +238,7 @@ jobs:
           cluster: myteacher-staging-cluster
           wait-for-service-stability: true
           wait-for-minutes: 10
-      
+
       - name: Verify deployment
         run: |
           sleep 30
@@ -241,32 +249,37 @@ jobs:
     name: Deploy to Production (Blue/Green)
     runs-on: ubuntu-latest
     needs: build
-    if: (github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target-environment == 'production')) && (github.event.inputs.skip-deploy != 'true' && github.event.inputs.build-only != 'true')
+    if: |
+      (github.ref == 'refs/heads/main' ||
+       (github.event_name == 'workflow_dispatch' &&
+        github.event.inputs.target-environment == 'production')) &&
+      github.event.inputs.skip-deploy != true &&
+      github.event.inputs.build-only != true
     environment:
       name: production
       url: https://api.myteacher.com
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+
       - name: Download task definition
         run: |
           aws ecs describe-task-definition \
             --task-definition myteacher-task-service-production \
             --query taskDefinition > task-def-production.json
-      
+
       - name: Update task definition with new image
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
@@ -274,7 +287,7 @@ jobs:
           task-definition: task-def-production.json
           container-name: task-service
           image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-      
+
       - name: Deploy to ECS with CodeDeploy (Blue/Green)
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
@@ -286,16 +299,17 @@ jobs:
           codedeploy-appspec: services/task-service/aws/appspec.yml
           codedeploy-application: myteacher-task-service
           codedeploy-deployment-group: myteacher-task-service-dg
-      
+
       - name: Wait for Green deployment
         run: sleep 60
-      
+
       - name: Verify production health
         run: |
           curl -f https://api.myteacher.com/health || exit 1
           curl -f https://api.myteacher.com/api/tasks?page=1&limit=1 \
-            -H "Authorization: Bearer ${{ secrets.TEST_JWT_TOKEN }}" || exit 1
-      
+            -H "Authorization: Bearer ${{ secrets.TEST_JWT_TOKEN }}" \
+            || exit 1
+
       - name: Notify deployment success
         if: success()
         uses: 8398a7/action-slack@v3
@@ -306,12 +320,15 @@ jobs:
               text: "✅ Task Service deployed to Production",
               attachments: [{
                 color: 'good',
-                text: `Commit: ${{ github.sha }}\nAuthor: ${{ github.actor }}\nImage: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}`
+                text: \
+                  "Commit: ${{ github.sha }}\nAuthor: ${{ github.actor }}\n\
+                   Image: ${{ steps.login-ecr.outputs.registry }}/\
+                          ${{ env.ECR_REPOSITORY }}:${{ github.sha }}"
               }]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      
+
       - name: Notify deployment failure
         if: failure()
         uses: 8398a7/action-slack@v3
@@ -332,9 +349,12 @@ jobs:
   rollback:
     name: Rollback Production
     runs-on: ubuntu-latest
-    if: failure() && github.ref == 'refs/heads/main' && needs.deploy-production.result == 'failure'
+    if: |
+      failure() &&
+      github.ref == 'refs/heads/main' &&
+      needs.deploy-production.result == 'failure'
     needs: deploy-production
-    
+
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -342,7 +362,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      
+
       - name: Get previous task definition revision
         id: previous-task-def
         run: |
@@ -351,24 +371,25 @@ jobs:
             --services ${{ env.ECS_SERVICE }} \
             --query 'services[0].taskDefinition' \
             --output text | grep -oP '\d+$')
-          
+
           PREVIOUS_REVISION=$((CURRENT_REVISION - 1))
           echo "previous-revision=${PREVIOUS_REVISION}" >> $GITHUB_OUTPUT
-      
+
       - name: Rollback to previous revision
         run: |
           aws ecs update-service \
             --cluster ${{ env.ECS_CLUSTER }} \
             --service ${{ env.ECS_SERVICE }} \
-            --task-definition myteacher-task-service-production:${{ steps.previous-task-def.outputs.previous-revision }} \
+            --task-definition \
+              myteacher-task-service-production:${{ steps.previous-task-def.outputs.previous-revision }} \
             --force-new-deployment
-      
+
       - name: Wait for rollback stability
         run: |
           aws ecs wait services-stable \
             --cluster ${{ env.ECS_CLUSTER }} \
             --services ${{ env.ECS_SERVICE }}
-      
+
       - name: Notify rollback
         uses: 8398a7/action-slack@v3
         with:
