fix: Update TaskService deployment and CI/CD workflow
- Fix Dockerfile: Create logs directory with proper permissions for non-root user
- Fix CI/CD workflow: Update trigger path reference to correct filename
- Push updated Docker image to ECR with logging permission fixes
- Deploy to ECS with resolved SSM access permissions and CloudWatch logging

Key fixes:
- SSM Parameter Store access permissions resolved
- CloudWatch Logs group created
- Dockerfile permissions fixed for nodejs user
- CI/CD workflow path corrected

Status: TaskService container deployment in progress with all infrastructure configured

--- a/services/task-service/Dockerfile
+++ b/services/task-service/Dockerfile
@@ -34,6 +34,11 @@ RUN npm ci --only=production && npm cache clean --force
 # Copy built application from builder stage
 COPY --from=builder --chown=nodejs:nodejs /app/src ./src
 
+# Create logs directory with proper permissions
+RUN mkdir -p logs && \
+    chown -R nodejs:nodejs logs && \
+    chmod -R 755 logs
+
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
