Fix Task Service configuration for current environment
- Update task definition with correct ECR image name
- Update service configuration for current VPC and subnets
- Enable public IP for ECS service
- Task Service successfully deployed and running on port 3000

CI/CD Status:
- ECS cluster recreated: ✅
- ECR repository recreated: ✅
- Task definition registered: ✅
- ECS service deployed: ✅
- Health check passing: ✅ (57.180.17.106:3000/health)
- API authentication working: ✅ (401 for /api/tasks without JWT)

--- a/services/task-service/aws/service-config.json
+++ b/services/task-service/aws/service-config.json
@@ -1,19 +1,19 @@
 {
-  "serviceName": "myteacher-task-service",
-  "cluster": "myteacher-production-cluster",
-  "taskDefinition": "myteacher-task-service-production:1",
+  "serviceName": "task-service",
+  "cluster": "mtdev-cluster",
+  "taskDefinition": "myteacher-task-service-production:4",
   "desiredCount": 1,
   "launchType": "FARGATE",
   "networkConfiguration": {
     "awsvpcConfiguration": {
       "subnets": [
-        "subnet-020e87d7082dfa4be",
-        "subnet-0dbe0cc6142fdee33"
+        "subnet-0c1d79eadf1822eab",
+        "subnet-0fadd933d273e2703"
       ],
       "securityGroups": [
-        "sg-0e94db2289e5cb5b0"
+        "sg-0e688b423f6ae5a88"
       ],
-      "assignPublicIp": "DISABLED"
+      "assignPublicIp": "ENABLED"
     }
   },
   "loadBalancers": [],
