Fix GitHub Actions workflow ECR repository name
- Update ECR_REPOSITORY from 'myteacher-task-service' to 'task-service'
- Match actual ECR repository name created

--- a/.github/workflows/task-service-ci-cd-clean.yml
+++ b/.github/workflows/task-service-ci-cd-clean.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   AWS_REGION: ap-northeast-1
-  ECR_REPOSITORY: myteacher-task-service
+  ECR_REPOSITORY: task-service
 
 jobs:
   test:
