feat: Implement Two-Factor Authentication and admin security features
## 主要機能

### 2FA (Two-Factor Authentication)
- Laravel Fortify統合による2FA実装
- QRコード生成とリカバリーコード発行
- パスワード確認チャレンジ (PasswordConfirmedResponse)
- 2FAチャレンジ画面 (two-factor-challenge.blade.php)
- プロフィール画面での2FA有効化/無効化UI

### 管理者セキュリティ
- IP制限機能 (AdminIpRestriction middleware)
- ログイン試行回数制限 (LoginAttemptService)
- 管理者専用ログイン画面 (/admin/login)
- 管理者認証ミドルウェア (EnsureUserIsAdmin)
- login_attemptsテーブルによるログイン履歴記録

### ウイルススキャン
- ClamAV統合 (ClamAVScanService)
- ファイルアップロード時の自動スキャン
- インターフェースによる実装 (VirusScanServiceInterface)

### バグ修正
- register.blade.php: 孤立した@enderrorディレクティブを削除
  - Line 137の不正なBladeディレクティブがParseErrorを引き起こしていた問題を解消

## 新規ファイル (57ファイル)

### Actions & Middleware
- app/Actions/Fortify/ (5 files): Fortify認証アクション
- app/Http/Actions/Admin/Auth/ (1 file): 管理者ログインAction
- app/Http/Middleware/ (2 files): IP制限・管理者認証
- app/Http/Responses/PasswordConfirmedResponse.php

### Services
- app/Services/Auth/ (2 files): ログイン試行管理
- app/Services/Security/ (2 files): ウイルススキャン

### Models & Providers
- app/Models/LoginAttempt.php
- app/Providers/FortifyServiceProvider.php

### Configuration
- config/admin.php: 管理者設定
- config/fortify.php: Fortify設定
- config/security.php: セキュリティ設定

### Database
- database/migrations/2025_11_29_230000_add_admin_security_features.php

### Views
- resources/views/admin/auth/login.blade.php
- resources/views/admin/dashboard.blade.php
- resources/views/auth/two-factor-challenge.blade.php
- resources/views/profile/partials/two-factor-authentication-form.blade.php

### Tests
- tests/Feature/Admin/AdminLoginSecurityTest.php
- tests/Feature/Auth/TwoFactorAuthenticationTest.php (6 tests, 16 assertions)
- tests/Feature/Security/VirusScanServiceTest.php

### Documentation
- docs/reports/2025-11-30-two-factor-authentication-implementation-report.md (779 lines)
- docs/security/stripe-admin-security-implementation.md
- docs/admin-security-env-example.txt
- docs/stripe-products/ (4 files): Stripe商品ガイド

## 変更ファイル 

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,51 @@ COGNITO_CLIENT_SECRET=
 COGNITO_ADMIN_CLIENT_ID=
 
 VITE_APP_NAME="${APP_NAME}"
+
+# ========================================
+# 管理者ユーザー設定
+# ========================================
+ADMIN_EMAIL=famicoapp@gmail.com
+ADMIN_PASSWORD=FS5Vt&s/L2X*
+
+# ========================================
+# 管理者セキュリティ設定（Stripe要件対応）
+# ========================================
+# IP制限機能の有効/無効（本番環境: true推奨）
+ADMIN_IP_RESTRICTION_ENABLED=false
+
+# 許可するIPアドレス（JSON配列形式、CIDR記法対応）
+# 例: '["192.168.1.100","203.0.113.0/24","10.0.0.0/8"]'
+# 本番環境では実際の管理者IPアドレスに変更してください
+ADMIN_ALLOWED_IPS='["127.0.0.1"]'
+
+# Basic認証設定（IP制限が使用できない場合の代替手段）
+ADMIN_BASIC_AUTH_ENABLED=false
+ADMIN_BASIC_AUTH_USERNAME=admin
+ADMIN_BASIC_AUTH_PASSWORD=FS5Vt&s/L2X*
+
+# アカウントロック設定
+ADMIN_MAX_LOGIN_ATTEMPTS=5
+ADMIN_LOCKOUT_DURATION=30
+
+# セキュリティログ保持期間（日）
+ADMIN_SECURITY_LOG_RETENTION_DAYS=90
+
+# ========================================
+# ウイルススキャン設定（Stripe要件対応）
+# ========================================
+# ClamAVコマンドのパス
+CLAMAV_PATH=/usr/bin/clamscan
+
+# スキャンタイムアウト（秒）
+CLAMAV_TIMEOUT=60
+
+# スキャン対象ファイルサイズ上限（バイト、0=無制限）
+CLAMAV_MAX_FILE_SIZE=0
+
+# ウイルススキャンの有効/無効
+SECURITY_VIRUS_SCAN_ENABLED=true
+
+# スキャン失敗時の動作（strict: 拒否、lenient: 警告のみ）
+SECURITY_SCAN_FAILURE_MODE=strict
+
