--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "aws/aws-sdk-php": "^3.317",
         "firebase/php-jwt": "^6.10",
         "laravel/cashier": "^16.0",
+        "laravel/fortify": "^1.32",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.28",
