--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -118,6 +118,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
           APP_KEY: ${{ secrets.APP_KEY }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           # コンテナイメージを更新
           jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" \
@@ -129,7 +130,14 @@ jobs:
             '.containerDefinitions[0].environment = 
               [.containerDefinitions[0].environment[] | select(.name != "APP_KEY")] + 
               [{name: "APP_KEY", value: $APP_KEY}]' \
-            task-definition-tmp.json > task-definition-new.json
+            task-definition-tmp.json > task-definition-tmp2.json
+          
+          # DB_PASSWORD環境変数を更新（既存の値を削除して追加）
+          jq --arg DB_PASSWORD "$DB_PASSWORD" \
+            '.containerDefinitions[0].environment = 
+              [.containerDefinitions[0].environment[] | select(.name != "DB_PASSWORD")] + 
+              [{name: "DB_PASSWORD", value: $DB_PASSWORD}]' \
+            task-definition-tmp2.json > task-definition-new.json
 
       #########################################################################
       # 7. ECSタスク定義登録
