Add public/** to workflow trigger paths for test-env.php deployment

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -24,6 +24,7 @@ on:
       - 'database/**'
       - 'resources/**'
       - 'routes/**'
+      - 'public/**'
       - 'composer.json'
       - 'composer.lock'
       - '.github/workflows/deploy-myteacher-app.yml'
