fix: Configure proper CloudWatch logging for production
- Dockerfile: Create storage directory structure (logs, framework/*, app/public)
  * .dockerignore excludes storage contents, so recreate structure in build
  * Ensure Laravel can write logs to storage/logs/
- Workflow: Add LOG_CHANNEL=stderr environment variable
  * Redirect Laravel logs to php://stderr for CloudWatch capture
  * Default 'stack' channel writes to files, invisible to CloudWatch
- Fix logging.php compatibility with current directory structure

This ensures Laravel application errors are visible in CloudWatch Logs.

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -138,7 +138,13 @@ jobs:
             '.containerDefinitions[0].environment = 
               [.containerDefinitions[0].environment[] | select(.name != "DB_PASSWORD")] + 
               [{name: "DB_PASSWORD", value: $DB_PASSWORD}]' \
-            task-definition-tmp2.json > task-definition-new.json
+            task-definition-tmp2.json > task-definition-tmp3.json
+          
+          # LOG_CHANNEL環境変数を追加（stderr: CloudWatch Logsに直接出力）
+          jq '.containerDefinitions[0].environment = 
+              [.containerDefinitions[0].environment[] | select(.name != "LOG_CHANNEL")] + 
+              [{name: "LOG_CHANNEL", value: "stderr"}]' \
+            task-definition-tmp3.json > task-definition-new.json
 
       #########################################################################
       # 7. ECSタスク定義登録
