fix: Move Laravel cache generation to runtime to respect ECS environment variables
Problem:
- config:cache/route:cache during Docker build captures build-time .env
- Runtime environment variables (APP_KEY, DB_PASSWORD, LOG_CHANNEL) from ECS task definition are ignored
- Results in 500 errors due to missing/incorrect configuration

Solution:
- Remove cache generation from Dockerfile build step
- Add entrypoint.sh to clear old cache and regenerate with runtime env vars
- Ensures ECS-injected environment variables are properly reflected

Changes:
- docker/Dockerfile: Remove artisan cache commands from build, add ENTRYPOINT
- docker/entrypoint.sh: Clear bootstrap cache and regenerate config/route/view cache at startup

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -75,10 +75,7 @@ RUN mkdir -p storage/logs \
 # =============================================================================
 # Laravel最適化
 # =============================================================================
-RUN composer install --no-dev --optimize-autoloader --prefer-dist \
-    && php artisan config:cache \
-    && php artisan route:cache \
-    && php artisan view:cache
+RUN composer install --no-dev --optimize-autoloader --prefer-dist
 
 # =============================================================================
 # パーミッション設定
@@ -98,6 +95,13 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 EXPOSE 80
 
 # =============================================================================
+# Entrypoint設定（起動時の初期化処理）
+# =============================================================================
+COPY docker/entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+# =============================================================================
 # 起動コマンド
 # =============================================================================
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 CMD ["apache2-foreground"]
