fix: Explicitly set entryPoint in Task Definition to force ENTRYPOINT execution
**問題**: ECSがDockerイメージのENTRYPOINTを無視
- Task Definition: entryPoint=null（イメージのデフォルト使用のはず）
- ECRイメージ: ENTRYPOINT正しく設定されている
- ローカル実行: startup-debug.sh → entrypoint.sh 正常動作
- ECS実行: [STARTUP-DEBUG]ログが全く出ない

**原因仮説**: ECS/Docker Engine の互換性問題で、null指定時にENTRYPOINTが読み込まれない

**対策**: Task Definitionに明示的指定
- entryPoint: ["/usr/local/bin/startup-debug.sh"]
- command: ["apache2-foreground"]

**検証方法**: Revision 43デプロイ後、CloudWatch Logsで[STARTUP-DEBUG]出力確認
- 出力あり → 原因確定、entrypoint.shのキャッシュ生成で500エラー解消
- 出力なし → より深刻な問題（ECS Exec調査必要）

Ref: 2FA本番デプロイ500エラー調査 (Revision 43)

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -144,7 +144,16 @@ jobs:
           jq '.containerDefinitions[0].environment = 
               [.containerDefinitions[0].environment[] | select(.name != "LOG_CHANNEL")] + 
               [{name: "LOG_CHANNEL", value: "stderr"}]' \
-            task-definition-tmp3.json > task-definition-new.json
+            task-definition-tmp3.json > task-definition-tmp4.json
+          
+          # ENTRYPOINT/CMDを明示的に設定（ECSがDockerイメージのENTRYPOINTを無視する問題の回避）
+          # デバッグ: startup-debug.shが実行されるか確認
+          jq '.containerDefinitions[0].entryPoint = ["/usr/local/bin/startup-debug.sh"] |
+              .containerDefinitions[0].command = ["apache2-foreground"]' \
+            task-definition-tmp4.json > task-definition-new.json
+          
+          echo "=== Task Definition Preview ==="
+          jq '.containerDefinitions[0] | {name, image, entryPoint, command}' task-definition-new.json
 
       #########################################################################
       # 7. ECSタスク定義登録
