fix: テスト実行前に.envファイルを作成
- .env.exampleをコピーして.envを作成
- APP_KEY生成の前提条件を満たす

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -77,6 +77,9 @@ jobs:
           # Composerの依存関係インストール
           composer install --no-interaction --prefer-dist --optimize-autoloader
           
+          # .envファイル作成（テスト用）
+          cp .env.example .env
+          
           # APP_KEYを生成（テスト用）
           php artisan key:generate --ansi
           
