fix: テスト実行時にconfig:clearを追加
設定キャッシュが古い状態でテストが実行されるのを防ぐため、
php artisan config:clear をテスト実行前に追加。

ただし、以下の根本的な問題が残っている:
- Sanctumパッケージが未インストール（API認証テスト失敗）
- dual.authミドルウェアエイリアスが未登録（DualAuthMiddlewareTest失敗）
- $slot変数未定義（ProfileTest失敗）

これらはテストコード/実装の問題であり、別途修正が必要。

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -88,7 +88,10 @@ jobs:
           # APP_KEYを生成（テスト用）
           php artisan key:generate --ansi
           
-          # テスト実行（phpunit.xmlでSQLite設定済み、キャッシュクリア不要）
+          # 設定キャッシュをクリア（テスト環境で正しい設定を読み込む）
+          php artisan config:clear
+          
+          # テスト実行（phpunit.xmlでSQLite設定済み）
           php artisan test --parallel || {
             echo "❌ Tests failed. Deployment aborted."
             exit 1
